--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,7 +23,6 @@ html {
 .head-wrapper {
 	justify-content: space-around;
 	align-items: center;
-	
 }
 .berger {
 	display: none;
@@ -37,14 +36,22 @@ html {
 	width: 50%;
 	height: 50%;
 	text-align: center;
+	border-radius: 50%;
 }
 
 .id-cont {
 	text-align: center;
 	font-size: 1.4rem;
 }
-.intro-cont, .about-cont, .tec-cont, .soft-cont, .edu-cont, .exper-cnot, .pro-cont, .contact-cont {
-	margin-top: 100px;
+.intro-cont,
+.about-cont,
+.tec-cont,
+.soft-cont,
+.edu-cont,
+.exper-cnot,
+.pro-cont,
+.contact-cont {
+	margin-top: 30px;
 }
 .intro-name {
 	background-color: rgb(248, 241, 245);
@@ -128,9 +135,7 @@ html {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		
 	}
-
 }
 .skill-col1 {
 	font-size: 2.3rem;
@@ -147,6 +152,9 @@ html {
 	flex-direction: column;
 	justify-content: center;
 } */
+.tech-flex {
+	text-align: center;
+}
 .skill-wrapper img {
 	width: 50%;
 }
@@ -156,15 +164,13 @@ html {
 	text-align: justify;
 }
 svg {
-	width:  100px;
+	width: 100px;
 	height: 100px;
-	fill:   blue;
+	fill: blue;
 	background-color: red;
-    }
+}
 
 .soft-wrapper {
-	margin-top: 10px;
-	padding-top: 35px;
 	align-items: center;
 	font-size: 1.8rem;
 	font-weight: 200;
@@ -174,6 +180,8 @@ svg {
 .soft-col1 {
 	font-weight: 600;
 	font-size: 2.3rem;
+	text-align: center;
+	margin-bottom: 20px;
 }
 
 .edu-title {
@@ -328,7 +336,6 @@ svg {
 	background-color: white;
 	height: 100px;
 	margin: auto;
-	
 }
 .img-nodejs {
 	background-image: url(./images/nodejs.svg);
@@ -347,13 +354,41 @@ svg {
 	margin: auto;
 }
 
-
-.back-img {
-	background-image: url(./images/web.jpg);
+.back-img1 {
+	background-image: url(./images/portfolio.jpg);
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-color: #464646;
+	width: 140px;
+	height: 100px;
+	margin: auto;
+}
+.back-img2 {
+	background-image: url(./images/que-answer.jpg);
 	background-position: center center;
 	background-repeat: no-repeat;
-	background-attachment: fixed;
 	background-size: cover;
+	background-color: #464646;
+	width: 140px;
+	height: 100px;
+	margin: auto;
+}
+.back-img3 {
+	background-image: url(./images/hackat.png);
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-color: #464646;
+	width: 140px;
+	height: 100px;
+	margin: auto;
+}
+.back-img4 {
+	background-image: url(./images/tv-show.jpg);
+	background-position: center center;
+	background-size: cover;
+	background-repeat: no-repeat;
 	background-color: #464646;
 	width: 140px;
 	height: 100px;
@@ -371,7 +406,16 @@ svg {
 }
 .pro-card {
 	text-align: center;
+	word-wrap: break-word;
 }
 .contact-cont {
 	height: 100vh;
+}
+.img-preview {
+	width: 100%;
+  height: auto;
+	
+}
+.img-certify {
+	visibility: visible;
 }
