--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -443,6 +443,6 @@ input[type=text], textarea {
 		padding: 20px;
 	    
     }
-    input[type=submit]:hover {
+    button[type=submit]:hover {
 	background-color: #45a049;
     }
